Prepare backend for Darpan 2.0.0